--- a/package.json
+++ b/package.json
@@ -4,8 +4,15 @@
   "description": "React  Js , Node Js  , scss",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "frontend" : "cd frontend &&  npm start",
+    "api" : "cd api && npm start",
+    "dev": "concurrently \"npm run frontend\" \"npm run api\""
   },
+  "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "concurrently": "^8.2.2"
+  }
 }
